# hooks4claude

./: .gitignore  .gitmodules  CLAUDE.md  Makefile  QUICKSTART.md  docker-compose.yml  rename-research.sh  setup.sh
docker/: .env.example  docker-compose.yml  setup.sh
docs/: CLAUDE.md  meilisearch-integration-strategy.md
embed-svc/: .gitignore  Cargo.toml  Makefile
embed-svc/models/: README.md
embed-svc/src/: main.rs
hook-shim/: CLAUDE.md  Cargo.toml
hooks-client/: Makefile  client_test.go  daemon.go  daemon_test.go  go.mod  main.go
hooks-mcp/: CLAUDE.md  Makefile  go.mod  go.sum
hooks-monitor/: .gitignore  .goreleaser.yml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  EXAMPLES.md  INSTALLME.md  Makefile  PLAN.md  README.md  go.mod  go.sum  install.ps1  install.sh  test-hooks.sh
hooks-store/: CLAUDE.md  go.mod  go.sum
meilisearch/: docker-compose.yml
plans/: CLAUDE.md  architecture-diagram.md  hooks-mcp-server.md  initial_plan.md  ml-phase1-vector-search.md  ml-phase2-rake-keywords.md  ml-phase3-topic-modeling.md  ml-phase4-blast-radius.md  ml-phase5-session-clustering.md  ml-phase6-markov-chains.md  ml-phase7-anomaly-detection.md  ml-phase8-onnx-rust.md  ml-phases-overview.md
research/: 20260228-1913_information-seeking-analysis.md  20260228-1928_compaction-carry-forward.md  20260228-2003_mcp-tool-design.md  20260228-2027_progressive-disclosure-memory.md  20260228-2037_conclusion.md  20260228-2128_compaction-function-carry-forward.md  20260301-1102_carry-forward-experiment-results.md  20260301-1112_work-log-vision.md  README.md  deep-memory-research.md  (+17 more)
(+113 files in other folders)
