[package]
name = "embed-svc"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
ort = { version = "2.0.0-rc.11", default-features = false, features = ["load-dynamic", "download-binaries", "copy-dylibs", "tls-rustls"] }
tokenizers = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["cors"] }
anyhow = "1"
